<resources>
    <string name="app_name">Kolay Sat</string>
    <string name="CreateAdvertViewPleaseEnterDescription">Lütfen ilan açıklamanızı giriniz... (En fazla 1000 karakter)</string>
    <string name="CreateAdvertViewUseLocationInfo">Konum bilgisi kullan...</string>
    <string name="CreateAdvertViewPrice">Fiyat(TL)...</string>
    <string name="CreateAdvertViewUseDifferentPhone">Farklı bir telefon numarası kullan...</string>
    <string name="CreateAdvertViewUseDifferentMail">Farklı bir mail adresi kullan...</string>
    <string name="SignUp"><u>Üye Ol!</u></string>
    <string name="UserName">Kullanıcı Adı</string>
    <string name="Password">Şifre</string>
    <string name="PasswordConfirm">Şifre Onayla</string>
    <string name="LogIn">Giriş Yap</string>
    <string name="Email">e-Mail Adresi</string>
    <string name="Phone">Telefon Numarası</string>
    <string name="NameSurname">Ad Soyad</string>
    <string name="CreateAdvert">İlan Ver</string>
    <string name="btnSettingsUpdate">Bilgi Güncelle</string>
    <string name="btnSettingsLogOut">Çıkış</string>
    <string name="CloseAdvert">İlanı Kapat</string>
    <string name="AreYouSureToCloseAdvert">İlanı Kapatmak İstediğinize Emin Misiniz?</string>
    <string name="Yes">Evet</string>
    <string name="No">Hayır</string>
    <string name="WebServiceConnectionError">Web Servis ile Bağlantı Kurulamadı!</string>
    <string name="Processing">İşlem Gerçekleştiriliyor. Lütfen Bekleyiniz...</string>
    <string name="IntentError">Intent Kullanım Hatası</string>
    <string name="PriceCannotBeNull">Intent Kullanım Hatası</string>
    <string name="PriceMustBeBiggerThanZero">Fiyat sıfırdan büyük olmalıdır...</string>
    <string name="PleaseEnterPhoneOrMail">Telefon numarası ya da email adresi giriniz...</string>
    <string name="DescriptionMustBeAtLeast30Character">Açıklama en az 30 karakter olmalıdır...</string>
    <string name="PleaseEnterDescription">Lütfen açıklama giriniz...</string>
    <string name="PleaseSelectSubCategory">Lütfen alt kategori seçiniz...</string>
    <string name="PleaseSelectMainCategory">Lütfen ana kategori seçiniz...</string>
    <string name="PasswordCannotBeNull">Şifre Boş Bırakılamaz...</string>
    <string name="UserNameCannotBeNull">Kullanıcı Adı Boş Bırakılamaz...</string>
    <string name="PasswordMatchingError">Şifreler Eşleşmiyor...</string>
    <string name="PasswordConfirmationCannotBeNull">Şifre Onayı Boş Bırakılamaz...</string>
    <string name="PhoneNumberCannotBeNull">Telefon Numarası Boş Bırakılamaz...</string>
    <string name="MailCannotBeNull">Mail Boş Bırakılamaz...</string>
    <string name="NameSurnameCannotBeNull">Ad Soyad Boş Bırakılamaz...</string>
    <string name="InvalidMail">Geçersiz Mail Formatı</string>
    <string name="Language">Dil</string>

    <string-array name="Language">
        <item>Turkce</item>
        <item>Ingilizce</item>
    </string-array>

    <string-array name="MainCategories">
        <item>Ana Kategori Seçiniz...</item>
        <item>Kiralik Ev</item>
        <item>Mobilya</item>
        <item>Ev Arkadasi</item>
        <item>Elektronik Esya</item>
        <item>Kitap</item>
        <item>Diger</item>
    </string-array>

    <string-array name="SubCategories2">
        <item>Alt Kategori Seçiniz...</item>
        <item>Kanepe</item>
        <item>Yatak</item>
        <item>Baza</item>
        <item>Gardirop</item>
        <item>Diger</item>
    </string-array>

    <string-array name="SubCategories3">
        <item>Alt Kategori Seçiniz...</item>
        <item>Farketmez</item>
        <item>Kadin</item>
        <item>Erkek</item>
    </string-array>

    <string-array name="SubCategories4">
        <item>Alt Kategori Seçiniz...</item>
        <item>Cep Telefonu</item>
        <item>Dizustu Bilgisayar</item>
        <item>Masaustu Bilgisayar</item>
        <item>Televizyon</item>
        <item>Buzdolabi</item>
        <item>Camasir Makinesi</item>
        <item>Bulasik Makinesi</item>
        <item>Diger</item>
    </string-array>

    <string-array name="SubCategories5">
        <item>Alt Kategori Seçiniz...</item>
        <item>Ders Kitabi</item>
        <item>Okuma Kitabi</item>
    </string-array>

    <array name="MainCategoriyIcons">
        <item>@drawable/iconcategorypleaseselect</item>
        <item>@drawable/iconcategoryhouse</item>
        <item>@drawable/iconcategoryfurniture</item>
        <item>@drawable/iconcategoryhomemate</item>
        <item>@drawable/iconcategoryelectronic</item>
        <item>@drawable/iconcategorybook</item>
        <item>@drawable/iconcategoryothers</item>
    </array>


</resources>
