<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.graduationteam.graduation.SignInActivity">

    <EditText
        android:id="@+id/SignInUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UserName" />

    <EditText
        android:id="@+id/SignInNameSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NameSurname" />

    <EditText
        android:id="@+id/SignInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/SigInPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Phone" />


    <EditText
        android:id="@+id/SignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password" />

    <EditText
        android:id="@+id/SignInPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PasswordConfirm" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn" />


</LinearLayout>
