<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.graduationteam.graduation.CreateAdvertActivity">

    <Spinner
        android:id="@+id/createAdvertMainCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/CreateAdvertViewPleaseEnterDescription"
        android:lines="10"
        android:maxLength="1000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CreateAdvertViewUseDifferentPhone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CreateAdvertViewUseDifferentMail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CreateAdvertViewUseLocationInfo" />

</LinearLayout>
