<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackEndColour"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/custom_layout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/LoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"
            android:maxLength="30"
            android:singleLine="true" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Password"
            android:maxLength="30"
            android:password="true"
            android:singleLine="true" />

        <Button
            android:background="@color/appBackEndColour"
            android:id="@+id/LogInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/appFrontEndColour"
            android:text="@string/LogIn" />

        <TextView
            android:id="@+id/LogInSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autoLink="web"
            android:clickable="true"
            android:textSize="20dp"
            android:hint="@string/SignUp" />

    </LinearLayout>


</LinearLayout>
