<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackEndColour"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserName" />

            <EditText
                android:id="@+id/SettingsUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:maxLength="30"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/NameSurname" />

            <EditText
                android:id="@+id/SettingsNameSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:maxLength="30"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/SettingsEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:maxLength="60"
                android:maxLines="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/Phone" />

            <EditText
                android:id="@+id/SettingsPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:maxLength="15"
                android:singleLine="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSettingsUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/appBackEndColour"
                android:text="@string/btnSettingsUpdate"
                android:textColor="@color/appFrontEndColour" />

            <Button
                android:id="@+id/btnSettingsLogOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/appBackEndColour"
                android:text="@string/btnSettingsLogOut"
                android:textColor="@color/appFrontEndColour" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
